--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
         ],
         "paths": {
             "@exports/components/layout": ["./src/exports/components/layout"],
-            "@exports/components/shared": ["./src/exports/components/shared"],
+            "@exports/components/shared": [
+                "./src/exports/components/shared.ts"
+            ],
             "@exports/components/views": ["./src/exports/components/views"],
             "@exports/styles/layout": ["./src/exports/styles/layout"],
             "@exports/styles/shared": ["./src/exports/styles/shared"],
